batch job, interactive job workload 조회,, 리스트 조회, 수정, 삭제 server-core controller 및 service 생성